--- a/charts/sonarqube-lts/values.yaml
+++ b/charts/sonarqube-lts/values.yaml
@@ -25,7 +25,7 @@ OpenShift:
 
 image:
   repository: sonarqube
-  tag: 8.9.7-community
+  tag: lts-developer
   pullPolicy: IfNotPresent
   # If using a private repository, the name of the imagePullSecret to use
   # pullSecret: my-repo-secret
@@ -215,7 +215,9 @@ prometheusExporter:
 #    - "https://github.com/AmadeusITGroup/sonar-stash/releases/download/1.3.0/sonar-stash-plugin-1.3.0.jar"
 #    - "https://github.com/SonarSource/sonar-ldap/releases/download/2.2-RC3/sonar-ldap-plugin-2.2.0.601.jar"
 plugins:
-  install: []
+  install: 
+   - https://github.com/hkamel/sonar-auth-aad/releases/download/1.2.0/sonar-auth-aad-plugin-1.2.0.jar
+   - https://github.com/EXXETA/sonar-esql-plugin/releases/download/2.3.5/esql-plugin-2.3.5.jar
   lib: []
 
   # image: rjkernick/alpine-wget:latest
